--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div class="col-md-12" id="timerContainer">
                             <div id="timerText">Time Remaining</div>
                             <div id="timer" style = "position: relative">--:--</div>
+                            <div id="image"></div>
                 </div>
                 
                     <div class="col-md-12" id="questionContainer">
