--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Fluid jumbotron!!</h1>
-            <p class="lead">Trivia Game!</p>
+            <h1 class="display-4">World Cup Quiz Game!</h1>
+            <p class="lead">Test your world cup knowledge</p>
             </div>
     </div>
 
