--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4" style = "text-align: center">World Cup Quiz Game!</h1>
+            <h1 class="display-4" style = "text-align: center; font-weight: bold;">World Cup Quiz Game!</h1>
             <p class="lead" style = "text-align: center">Test your world cup knowledge</p>
             </div>
     </div>
